test/fail_compilation/jsonBadQuery2.d
/*
PERMUTE_ARGS:
REQUIRED_ARGS: -Xq=,!
TEST_OUTPUT:
---
Error: invalid JSON query at offset 1: expected a name but got '!' (0x21)
       run 'dmd -man' to open browser on manual
---
*/
